# forecasting-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
assets/: .gitkeep
docs/: index.html
src/forecasting_lab/: __init__.py  data.py  metrics.py  models.py
tests/: test_data.py  test_metrics.py  test_models.py
