[project]
name = "forecasting-lab"
version = "0.1.0"
description = "Small Streamlit app to compare simple time-series forecasting models with prediction intervals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
